// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for background: canvas, size: "small", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-lg) !important;
  padding: calc(var(--p-spacing-static-md) - var(--p-spacing-static-xs))
    calc(28 * var(--p-spacing-static-2xs) - var(--p-spacing-static-xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)),
::slotted(button:nth-child(1)) {
  background-image: linear-gradient(
    var(--p-color-frosted-strong),
    var(--p-color-frosted-strong)
  ) !important;
  background-size: 100% 100% !important;
  transition: background-size 0s linear var(--p-duration-md) !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-lg);
  place-self: flex-start;
  background: var(--p-color-canvas);
  padding: var(--p-spacing-static-xs);
  border-radius: var(--p-radius-xl);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted-strong);
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:not(:nth-child(1)):hover),
  ::slotted(button:not(:nth-child(1)):hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "medium", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-lg) !important;
  padding: calc(var(--p-spacing-static-md) - var(--p-spacing-static-xs))
    calc(28 * var(--p-spacing-static-2xs) - var(--p-spacing-static-xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-md) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)),
::slotted(button:nth-child(1)) {
  background-image: linear-gradient(
    var(--p-color-frosted-strong),
    var(--p-color-frosted-strong)
  ) !important;
  background-size: 100% 100% !important;
  transition: background-size 0s linear var(--p-duration-md) !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-lg);
  place-self: flex-start;
  background: var(--p-color-frosted);
  padding: var(--p-spacing-static-xs);
  border-radius: var(--p-radius-xl);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted-strong);
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:not(:nth-child(1)):hover),
  ::slotted(button:not(:nth-child(1)):hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "medium", isCompact: true, activeTabIndex: 0 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-md) !important;
  padding: calc(7 * var(--p-spacing-static-2xs) - var(--p-spacing-static-xs))
    calc(var(--p-spacing-static-md) - var(--p-spacing-static-xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-md) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)),
::slotted(button:nth-child(1)) {
  background-image: linear-gradient(
    var(--p-color-frosted-strong),
    var(--p-color-frosted-strong)
  ) !important;
  background-size: 100% 100% !important;
  transition: background-size 0s linear var(--p-duration-md) !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-md);
  place-self: flex-start;
  background: var(--p-color-frosted);
  padding: calc(3 * var(--p-spacing-static-2xs));
  border-radius: var(--p-radius-lg);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-md);
  background: var(--p-color-frosted-strong);
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:not(:nth-child(1)):hover),
  ::slotted(button:not(:nth-child(1)):hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "small", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-lg) !important;
  padding: calc(var(--p-spacing-static-md) - var(--p-spacing-static-xs))
    calc(28 * var(--p-spacing-static-2xs) - var(--p-spacing-static-xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)),
::slotted(button:nth-child(1)) {
  background-image: linear-gradient(
    var(--p-color-frosted-strong),
    var(--p-color-frosted-strong)
  ) !important;
  background-size: 100% 100% !important;
  transition: background-size 0s linear var(--p-duration-md) !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-lg);
  place-self: flex-start;
  background: var(--p-color-frosted);
  padding: var(--p-spacing-static-xs);
  border-radius: var(--p-radius-xl);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted-strong);
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:not(:nth-child(1)):hover),
  ::slotted(button:not(:nth-child(1)):hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: none, size: "small", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-xl) !important;
  padding: var(--p-spacing-static-md) calc(28 * var(--p-spacing-static-2xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)),
::slotted(button:nth-child(1)) {
  background-image: linear-gradient(
    var(--p-color-frosted-strong),
    var(--p-color-frosted-strong)
  ) !important;
  background-size: 100% 100% !important;
  transition: background-size 0s linear var(--p-duration-md) !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-xl);
  place-self: flex-start;
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted-strong);
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:not(:nth-child(1)):hover),
  ::slotted(button:not(:nth-child(1)):hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: none, size: "small", isCompact: false, activeTabIndex: 2 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-xl) !important;
  padding: var(--p-spacing-static-md) calc(28 * var(--p-spacing-static-2xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(3)),
::slotted(button:nth-child(3)) {
  background-image: linear-gradient(
    var(--p-color-frosted-strong),
    var(--p-color-frosted-strong)
  ) !important;
  background-size: 100% 100% !important;
  transition: background-size 0s linear var(--p-duration-md) !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-xl);
  place-self: flex-start;
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted-strong);
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:not(:nth-child(3)):hover),
  ::slotted(button:not(:nth-child(3)):hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: none, size: "small", isCompact: false, activeTabIndex: undefined 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-xl) !important;
  padding: var(--p-spacing-static-md) calc(28 * var(--p-spacing-static-2xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-xl);
  place-self: flex-start;
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted-strong);
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:hover),
  ::slotted(button:hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: none, size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-xl) !important;
  padding: var(--p-spacing-static-md) calc(28 * var(--p-spacing-static-2xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)),
::slotted(button:nth-child(1)) {
  background-image: linear-gradient(
    var(--p-color-frosted-strong),
    var(--p-color-frosted-strong)
  ) !important;
  background-size: 100% 100% !important;
  transition: background-size 0s linear var(--p-duration-md) !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-xl);
  place-self: flex-start;
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted-strong);
}
@media (min-width: 480px) {
  ::slotted(a),
  ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}
@media (min-width: 760px) {
  ::slotted(a),
  ::slotted(button) {
    font-size: var(--p-typescale-sm) !important;
  }
}
@media (min-width: 1000px) {
  ::slotted(a),
  ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}
@media (min-width: 1300px) {
  ::slotted(a),
  ::slotted(button) {
    font-size: var(--p-typescale-sm) !important;
  }
}
@media (min-width: 1760px) {
  ::slotted(a),
  ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:not(:nth-child(1)):hover),
  ::slotted(button:not(:nth-child(1)):hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: surface, size: "small", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a),
::slotted(button) {
  all: unset !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--p-radius-lg) !important;
  padding: calc(var(--p-spacing-static-md) - var(--p-spacing-static-xs))
    calc(28 * var(--p-spacing-static-2xs) - var(--p-spacing-static-xs)) !important;
  font: var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  background: 0 0/0% 100% no-repeat !important;
  transition: background-color var(--p-duration-sm) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible),
::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)),
::slotted(button:nth-child(1)) {
  background-image: linear-gradient(
    var(--p-color-frosted-strong),
    var(--p-color-frosted-strong)
  ) !important;
  background-size: 100% 100% !important;
  transition: background-size 0s linear var(--p-duration-md) !important;
}
.scroller {
  --_p-scroller-focus-ring-radius: var(--p-radius-lg);
  place-self: flex-start;
  background: var(--p-color-surface);
  padding: var(--p-spacing-static-xs);
  border-radius: var(--p-radius-xl);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted-strong);
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible),
  ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
  ::slotted(a),
  ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
  .bar {
    display: none;
  }
}
@media (hover: hover) {
  ::slotted(a:not(:nth-child(1)):hover),
  ::slotted(button:not(:nth-child(1)):hover) {
    background-color: var(--p-color-frosted) !important;
  }
}
"
`;
